--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,17 @@
 
 html,
 body{
-	width: 100vw;
+	max-width: 100vw;
 	background-color: #27211f;
 }
 
 div{
 	color: #FFF;
 }
+
+
+/*========================================================*/
+/*								Header 							*/
 
 header .wrapper{
 	margin-left: 20%;
@@ -62,6 +66,7 @@ header a:hover{
 
 header .title{
 	position: relative;
+	color: rgb(255, 224, 46);
 }
 
 header .title a{
@@ -95,6 +100,60 @@ header .title a:before{
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.menu a:hover{
+	text-shadow: 0 0 7px gold;
+	padding: 0 3px;
+	transition: 0.3s;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+/* 									Media 									*/
+/* ======================================================================== */
+
+@media screen and (max-width: 665px){
+	
+	.menu{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-direction: row !important;
+		z-index: 10000;
+		position: fixed;
+		top: -120px;
+		left: 0 !important;
+		opacity: 0;
+		visibility: hidden;
+		background-color: #242424;
+		transition: all 0.3s !important;
+		border-radius: 15px;
+		width: 100%;
+	}
+
+	.menu a{
+		padding: 35px 30px;
+		font-size: 35px;
+	}
+
+	.menu.show{
+		position: fixed;
+		visibility: visible !important;
+		opacity: 1 !important;
+		top: 0;
+	}
+}
+
+@media screen and (max-width: 665px){
+
+	header .menu.show{
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+
+.flex{
+	display: flex;
+}
 /*========================================================*/
 /*                      Hi                      */
 .hi{
@@ -102,12 +161,19 @@ header .title a:before{
 }
 
 .hi .container{
-	max-width: 840px;
+	max-width: 100%;
 	margin: 0 auto;
 	position: relative;
 }
 
+.hi__content{
+	margin-left: 180px;
+	padding-left: 30px;
+}
+
 .hi__avatar{
+	margin-right: 270px;
+	padding-right: 30px;
 	height: 190px;
 	width: 190px;
 	position: absolute;
@@ -155,7 +221,7 @@ header .title a:before{
 	letter-spacing: 3px;
 }
 
-.button{
+.hi__button{
 	margin-top: 70px;
 }
 
@@ -183,6 +249,52 @@ header .title a:before{
 
 .btn:hover a{
 	color: #ccc;
+}
+
+/* 									Media 									*/
+/* ======================================================================== */
+@media screen and (max-width: 900px){
+	.hi__content{
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.hi__avatar{
+		top: 30px;
+		left: 0;
+	}
+
+	.hi__content{
+		padding-left: 120px;
+	}
+
+	.hi__title{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+	}
+}
+
+@media screen and (max-width: 754px){
+	.hi__avatar{
+		left: -130px;
+	}
+}
+
+@media screen and (max-width: 500px){
+	.hi__avatar{
+		left: -180px;
+	}
+}
+
+@media screen and (max-width: 530px){
+	.hi__button{
+		margin-right: 30px;
+	}
 }
 
 /*========================================================*/
@@ -271,6 +383,7 @@ header .title a:before{
 	display: none;
 	cursor: pointer;
 	position: fixed;
+	z-index: 10000000000;
 	bottom: 30px;
 	right: 30px;
 }
@@ -288,10 +401,15 @@ header .title a:before{
 
 /*========================================================*/
 /*                      Works                      */
+.works{
+	position: relative;
+}
+
 .works__wrapper{
 	max-width: 825px;
 	margin: 0 auto;
 	margin-top: 130px;
+	margin-bottom: 180px;
 }
 
 .works__title{
@@ -338,6 +456,7 @@ header .title a:before{
 	height: 184px;
 	background: url('../img/johns_site_img.png') -35px 0 / cover no-repeat;
 	border-radius: 15px;
+	padding-left: 15px;
 }
 
 .item__content{
@@ -399,7 +518,54 @@ header .title a:before{
 	border-bottom: 1px solid #333;
 }
 
-/* 						Form / Contact 						*/
+/* 									Media 									*/
+/* ======================================================================== */
+@media screen and (max-width: 880px){
+
+	.works__item{
+		flex-direction: column;
+	}
+
+	.item__content{
+		padding-top: 180px;
+		padding-bottom: 120px;
+		position: absolute;
+		left: 30px;
+	}
+}
+
+@media screen and (max-width: 467px){
+
+	.works__wrapper{
+		margin-bottom: 230px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.works__title{
+		position: absolute;
+		top: 0;
+		left: 40%;
+	}
+
+	.works__column{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: row;
+	}
+
+	.works__content{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+}
+
+
+/* 									Form / Contact 									*/
+/* ======================================================================== */
 form{
 	margin-top: 120px;
 	position: relative;
@@ -414,64 +580,275 @@ form{
 	align-items: center;
 	justify-content: center;
 	position: relative;
+	letter-spacing: 3px;
 }
 
 .form__title:after{
 	content: '';
 	background-color: #333;
 	box-shadow: 0 0 1px #666;
-	width: 80px;
+	width: 90px;
 	height: 1px;
 	position: absolute;
 	bottom: 0;
 }
 
+.form__wrapper{
+	width: 841px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.form__column{
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+}
+
 .form__item{
-	padding: 30px;
+	margin: 30px 0;
 }
 
 .form__label{
 	display: block;
 	color: #FF6464;
-	font-size: 23px;
+	font-size: 28px;
+	margin: 0px 0px 3px 0px;
+	letter-spacing: 3px;
+	text-shadow: 0 0 3px #FF6464;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0px 1000px white inset;
+	-webkit-text-fill-color: gold !important;
+}
+
+button:focus,input:focus, a:focus{
+	text-decoration: none !important;
+	outline: none !important;
 }
 
 .form__input{
-	width: 150px;
-	box-shadow: 0 0 3px #fff;
-	border-radius: 3 px;
-}
-
-textarea{
+	padding: 8px;
 	width: 100%;
-	height: 150px;
+	color: gold;
+	font-size: 18px;
+	font-weight: bold;
+	height: 30px;
+	box-shadow: 0 0 3px #fff;
+	border-radius: 3px;
+	letter-spacing: 1px;
 }
 
-form .btn{
-	margin-left: 30%;
-	margin-bottom: 30px;
+.form__input:focus{
+	box-shadow: 0 0 8px gold;
 }
 
-@media screen and (max-width: 664px){
-	header .menu{
-		display: none;
-		transition: all 0.3s;
+#txtarea{
+	height: 100px;
+}
+
+.form__column-text{
+	position: absolute;
+	top: 0;
+	margin-top: 120px;
+	padding-left: 30px;
+	right: 0;
+	font-size: 23px;
+	letter-spacing: 1px;
+	color: rgba(204, 204, 204, 0.342);
+}
+
+.form__column-text span{
+	margin-top: 120px;
+}
+
+.btnForm__wrapper{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.form__button a{
+	font-size: 30px;
+	letter-spacing: 6px;
+	margin: 0;
+	padding: 0;
+	text-transform: uppercase;
+}
+
+/*									Media contact								*/
+		/*=================================================*/
+
+@media screen and (max-width: 755px){
+	.form{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100vw;
 	}
 
-	header .menu.show{
+	.form .flex{
 		display: flex;
+		align-items: center;
+		justify-content: center;
 		flex-direction: column;
 	}
+
+	.form__column-text{
+		display: none;
+		opacity: 0;
+		visibility: hidden;
+	}
 }
 
-.hidden{
-	display: none;
+@media screen and (max-width: 470px){
+	.form{
+		padding-left: 30px;
+	}
+}
+
+@media screen and (max-width: 400px){
+	.form{
+		padding-left: 120px;
+	}
+}
+ 
+/* 								Error of sending by Name and Email									*/
+.popup__error-name-msg, .popup__error-msg{
+	display: flex;
+	box-sizing: border-box;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	top: 35%;
+	left: 35%;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.3s;
+}
+
+ .popup__error-name-msg-wrapper, .popup__error-msg-wrapper{
+	border: 1px solid gold;
+	box-shadow: 0 0 8px gold;
+	background-color: gold;
+	color: #242424;
+	padding: 30px;
+	font-size: 30px;
+	letter-spacing: 3px;
+	transition: all 0.3s;
+ }
+
+ .popup__error-msg-show{
+	z-index: 1000000;
+	visibility: visible;
+	opacity: 1;
+	cursor: pointer;
+ }
+
+/* 									Footer									*/
+/* ======================================================================== */
+.footer__wrapper{
+	padding: 0 15px;
+	padding-bottom: 60px;
+	position: relative;
+}
+
+.footer__flex{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.footer__item{
+	padding-right: 18px;
+}
+
+.footer__text{
+	display: block;
+	position: absolute;
+	bottom: 15px;
 }
 
 .show{
 	display: block;
 }
 
-.flex{
-	display: flex;
+.main{
+	position: relative;
+	z-index: 10;
+	box-shadow: 0 0 7px gold !important;
+}
+
+.main .wrapper {
+  position: relative;
+}
+.main .wrapper span {
+  width: 60px;
+  height: 1px;
+  background-color: gold;
+  position: absolute;
+  transition: all 0.7s;
+}
+.main .wrapper #fst {
+  right: -40px;
+  top: 20px;
+}
+.main .wrapper #sec {
+  left: -40px;
+  top: 20px;
+}
+.main .wrapper #thd {
+  bottom: 20px;
+  right: -20px;
+}
+.main .wrapper #fth {
+  bottom: 20px;
+  left: -20px;
+}
+.main .wrapper .btn {
+  width: 180px;
+  height: 60px;
+  background-color: #27211f;
+  color: gold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: italic;
+  padding: 30px;
+  border: gold solid 1px;
+  cursor: pointer;
+  font-size: 18px;
+  letter-spacing: 3px;
+  transition: all 2.7s;
+}
+.main .btn:hover {
+  background-color: gold;
+  color: #27211f;
+  letter-spacing: normal;
+  font-weight: bold;
+  font-size: 19px;
+  box-shadow: 0 0 37px 7px gold;
+  backdrop-filter: blur(15px);
+}
+.main .btn:focus {
+	box-shadow: 0 0 137px 17px green;
+ }
+.main .btn:hover #fst {
+  right: 1px;
+  width: 90px;
+}
+.main .btn:hover #sec {
+  width: 90px;
+  left: 1px;
+}
+.main .btn:hover #thd {
+  right: 10px;
+  width: 90px;
+}
+.main .btn:hover #fth {
+  left: 10px;
+  width: 90px;
 }
