--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,60 @@ div{
 /*========================================================*/
 /*								Header 							*/
 
+.custom-shape-divider-top-1636813373 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+}
+
+.custom-shape-divider-top-1636813373 svg {
+	position: relative;
+	display: block;
+	width: calc(100% + 1.3px);
+	height: 163px;
+}
+
+.custom-shape-divider-top-1636813373 .shape-fill {
+	fill: goldenrod;
+}
+
+header::before{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translate(-50%,-50%);
+	width: 270px;
+	height: 270px;
+	border-radius: 100%;
+	background: goldenrod;
+}
+
+header::after{
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	transform: translate(-50%,-50%);
+	width: 370px;
+	height: 370px;
+	border-radius: 100%;
+	background: rgba(255,255,255,0.05);
+}
+
 header .wrapper{
 	margin-left: 20%;
 	width: 80%;
-	background-color: #666;
+	background: rgba(255,255,255,0.05);
 	padding: 0 15px;
 	height: 90px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	border-left: 1px solid gold;
 }
 
 .bgr{
@@ -90,11 +135,14 @@ header .title a:before{
 }
 
 .menu{
+	position: absolute;
+	right: 0;
+	transform: translateY(-50%);
 	padding-right: 10px;
 }
 
 .menu a{
-	text-shadow: 0 0 3px #ccc;
+	text-shadow: 0 0 3px gold;
 	padding: 0 3px;
 	transition: 0.3s;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -125,7 +173,6 @@ header .title a:before{
 		visibility: hidden;
 		background-color: #242424;
 		transition: all 0.3s !important;
-		border-radius: 15px;
 		width: 100%;
 	}
 
@@ -135,10 +182,10 @@ header .title a:before{
 	}
 
 	.menu.show{
+		top: 45px;
 		position: fixed;
 		visibility: visible !important;
 		opacity: 1 !important;
-		top: 0;
 	}
 }
 
@@ -156,6 +203,9 @@ header .title a:before{
 }
 /*========================================================*/
 /*                      Hi                      */
+section.About{
+	height: 100vh;
+}
 .hi{
 	margin-top: 80px;
 }
@@ -225,32 +275,6 @@ header .title a:before{
 	margin-top: 70px;
 }
 
-.btn{
-	width: 203px;
-	height: 60px;
-	background-color: #FF6464;
-	box-shadow: 0 0 10px #FF6464;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition: 0.3s;
-}
-
-.btn a{
-	font-size: 23px;
-	color: #fff;
-	letter-spacing: 3px;
-	transition: 0.3s;
-}
-
-.btn:hover{
-	background-color: #ff5151 ;
-}
-
-.btn:hover a{
-	color: #ccc;
-}
-
 /* 									Media 									*/
 /* ======================================================================== */
 @media screen and (max-width: 900px){
@@ -307,8 +331,9 @@ header .title a:before{
 	border-radius: 3px;
 	width: 487px;
 	margin: 0 auto;
-	background-color: #fff;
-	box-shadow: 8px 8px 0 0 #666;
+	background: linear-gradient(to right top, rgba(255,255,255,0.05), transparent);
+   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+   border: 1px solid rgba(230, 255, 0, 0.1);
 	z-index: 10;
 	box-sizing: border-box;
 	position: relative;
@@ -325,26 +350,12 @@ header .title a:before{
 	justify-content: center;
 }
 
-.about__title:after{
-	content: '';
-	background-color: #999;
-	box-shadow: 0 0 3px #999;
-	width: 100px;
-	height: 1px;
-	position: absolute;
-	bottom: -5px;
-}
-
 .about__content{
 	padding:8px 6px;
 	margin: 8px 6px;
 	margin-top: 23px;
 	position: relative;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-.about__content div{
-	color: #666;
 }
 
 .about__name{
@@ -408,6 +419,7 @@ header .title a:before{
 /*                      Works                      */
 .works{
 	position: relative;
+	height: 100vh;
 }
 
 .works__wrapper{
@@ -432,7 +444,7 @@ header .title a:before{
 .works__title:after{
 	content: '';
 	background-color: #666;
-	box-shadow: 0 0 3px #666;
+	box-shadow: 0 0 3px rgba(102, 102, 102, 0.7);
 	width: 68px;
 	height: 1px;
 	position: absolute;
@@ -571,7 +583,8 @@ header .title a:before{
 
 /* 									Form / Contact 									*/
 /* ======================================================================== */
-form{
+.form{
+	height: 80vh;
 	margin-top: 120px;
 	position: relative;
 }
@@ -622,16 +635,26 @@ form{
 	letter-spacing: 3px;
 	text-shadow: 0 0 3px gold;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	position: relative;
 }
+
+.form__label::before{
+	content: '';
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: -7px;
+	width: 30px;
+	height: 10px;
+	background: #f00;
+	border-radius: 10px;
+	transition: .7s;
+	transition-delay: 0s;
+ }
 
 input:-webkit-autofill {
-	-webkit-box-shadow: 0 0 0px 1000px white inset;
+	-webkit-box-shadow: 0 0 0 1000px #27211ffa inset;
 	-webkit-text-fill-color: gold !important;
-}
-
-button:focus,input:focus, a:focus{
-	text-decoration: none !important;
-	outline: none !important;
 }
 
 .form__input{
@@ -641,9 +664,11 @@ button:focus,input:focus, a:focus{
 	font-size: 18px;
 	font-weight: bold;
 	height: 30px;
-	box-shadow: 0 0 3px #fff;
+	box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
 	border-radius: 3px;
 	letter-spacing: 1px;
+	background: rgba(255,255,255,0.05);
+	backdrop-filter: blur(15px);
 }
 
 .form__input:focus{
@@ -762,6 +787,12 @@ button:focus,input:focus, a:focus{
 }
 
 .footer__flex{
+	height: 130px;
+	position: relative;
+	top: 0;
+	z-index: 3;
+	margin-left: 50%;
+	transform: translateX(-50%);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -777,6 +808,10 @@ button:focus,input:focus, a:focus{
 	text-shadow: 0 0 17px rgba(255, 217, 0, 0.534);
 }
 
+header .fa{
+	font-size: 17px;
+}
+
 .footer__text{
 	display: block;
 	position: absolute;
@@ -784,14 +819,35 @@ button:focus,input:focus, a:focus{
 	color: rgba(255, 217, 0, 0.534);
 }
 
+.custom-shape-divider-bottom-1636812106 {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+	transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1636812106 svg {
+	position: relative;
+	display: block;
+	width: calc(100% + 1.3px);
+	height: 201px;
+}
+
+.custom-shape-divider-bottom-1636812106 .shape-fill {
+	fill: goldenrod;
+}
+
 .show{
 	display: block;
 }
 
 .main{
+	margin-top: 30px;
 	position: relative;
 	z-index: 10;
-	box-shadow: 0 0 7px gold !important;
 }
 
 .main .wrapper {
@@ -807,10 +863,12 @@ button:focus,input:focus, a:focus{
 .main .wrapper #fst {
   right: -40px;
   top: 20px;
+  transition-delay: 0.3s;
 }
 .main .wrapper #sec {
   left: -40px;
   top: 20px;
+  transition-delay: 0.3s;
 }
 .main .wrapper #thd {
   bottom: 20px;
@@ -834,7 +892,25 @@ button:focus,input:focus, a:focus{
   cursor: pointer;
   font-size: 18px;
   letter-spacing: 3px;
-  transition: all 2.7s;
+  transition: all 0.7s ease-out;
+  box-shadow: 0 0 7px gold;
+  transition-delay: 1s;
+  position: relative;
+  overflow: hidden;
+}
+.main .wrapper .btn::before{
+	content:'';
+	width: 50%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background: linear-gradient(to left,rgba(255,255,255,0.15),transparent);
+  transform: skewX(45deg) translateX(0);
+  transition: 0.5s;
+}
+.main .wrapper .btn:hover::before{
+  transform: skewX(25deg) translateX(200%);
 }
 .main .btn:hover {
   background-color: gold;
@@ -842,25 +918,25 @@ button:focus,input:focus, a:focus{
   letter-spacing: normal;
   font-weight: bold;
   font-size: 19px;
-  box-shadow: 0 0 37px 7px gold;
+  box-shadow: 0 0 5px  gold,
+              0 0 15px gold,
+              0 0 30px gold,
+              0 0 60px gold;
   backdrop-filter: blur(15px);
 }
-.main .btn:focus {
-	box-shadow: 0 0 137px 17px green;
- }
 .main .btn:hover #fst {
-  right: 1px;
+  right: 0;
   width: 90px;
 }
 .main .btn:hover #sec {
   width: 90px;
-  left: 1px;
+  left: 0;
 }
 .main .btn:hover #thd {
-  right: 10px;
+  right: 0;
   width: 90px;
 }
 .main .btn:hover #fth {
-  left: 10px;
+  left: 0;
   width: 90px;
 }
